Arreglando dashboard de cuentas

--- a/static/admin_pages/accounts.html
+++ b/static/admin_pages/accounts.html
@@ -12,7 +12,7 @@
 <!-- Payment Modal (manejado por admin_dashboard.html) -->
 
 <!-- Account History Modal -->
-<div id="account-history-modal" class="modal-overlay">
+<div id="account-history-modal" class="modal-overlay" style="display: none;">
     <div class="card modal-card-large modal-card-scrollable">
         <h3>Historial de Cuentas</h3>
         <div id="history-list" class="modal-content-scroll">
@@ -25,7 +25,7 @@
 </div>
 
 <!-- Account Details Modal (Reusable for history details) -->
-<div id="account-details-modal" class="modal-overlay modal-overlay-higher">
+<div id="account-details-modal" class="modal-overlay modal-overlay-higher" style="display: none;">
     <div class="card modal-card-xlarge modal-card-scrollable-high">
         <h3 id="details-title">Detalles de Cuenta</h3>
         <div id="details-content" class="modal-content-scroll">
@@ -38,7 +38,7 @@
 </div>
 
 <!-- Create Mesa Modal -->
-<div id="create-mesa-modal" class="modal-overlay modal-overlay-highest">
+<div id="create-mesa-modal" class="modal-overlay modal-overlay-highest" style="display: none;">
     <div class="card modal-card-medium">
         <h3>Crear Nueva Mesa</h3>
         <form id="create-mesa-form">
