--- a/static/admin_dashboard_bees.html
+++ b/static/admin_dashboard_bees.html
@@ -66,7 +66,7 @@
             <div id="settings" class="page"></div>
 
             <!-- MODAL PARA REGISTRAR PAGO -->
-            <div id="payment-modal" class="modal-overlay" style="display: none;">
+            <div id="payment-modal" class="modal-overlay hidden">
                 <div class="card modal-card modal-card-sm">
                     <h3 id="payment-modal-title">Registrar Pago</h3>
                     <form id="payment-form">
@@ -94,7 +94,7 @@
             </div>
 
             <!-- MODAL PARA CONFIRMAR SOBREPAGO -->
-            <div id="confirm-overpayment-modal" class="modal-overlay" style="display: none;">
+            <div id="confirm-overpayment-modal" class="modal-overlay hidden">
                 <div class="card modal-card modal-card-md" id="overpayment-card">
                     <h3>Confirmación de Sobrepago</h3>
                     <p id="overpayment-message">El monto ingresado es mayor que la deuda actual. ¿Deseas registrarlo
