cambios en la gestion de codigos qr

--- a/static/admin_dashboard_bees.html
+++ b/static/admin_dashboard_bees.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/static/admin_pages/queue.css">
     <link rel="stylesheet" href="/static/admin_pages/reports.css">
     <link rel="stylesheet" href="/static/admin_pages/settings.css">
+    <link rel="stylesheet" href="/static/admin_pages/accounts.css">
 </head>
 
 <body>
